--- a/models/finn/config.json
+++ b/models/finn/config.json
@@ -1,41 +1,27 @@
 {
-	"paths": {},
+	"paths": {
+	},
+
 	"general": {
-	 "device": "cpu"
+		"device": "cpu"  // "cpu" or "cuda"
 	},
+
 	"training": {
-	 "save_model": true,
-	 "continue_training": true,
-	 "epochs": 500,
-	 "learning_rate": 0.001
+		"save_model": true,
+		"continue_training": false,
+		"epochs": 100,
+		"learning_rate": 0.1
 	},
+
 	"data": {
-	 "type": "diffusion_ad2ss",
-	 "name": "data_ext",
-	 "noise": 0
+		"type": "diffusion_ad2ss",  // "burger", "burger_2d" "diffusion_sorption", "diffusion_reaction", "allen_cahn"
+		"name": "data_train", // "data_train", "data_ext", "data_test"
+		"noise": 0.0
 	},
+
 	"model": {
-	 "name": "diff-ad2ss",
-	 "number": 29,
-	 "layer_sizes": [
-	  2,
-	  100,
-	  1000,
-	  100,
-	  1
-	 ]
-	},
-	"learn": {
-	 "c_out": false,
-	 "loss_calc_c_out": "MSLE",
-	 "sk_end": false,
-	 "synth": true
-	},
-	"results": {
-	 "current_epoch": 500,
-	 "current_training_error": 7.523981912223136e-15,
-	 "lowest_train_error": 7.523981912223136e-15,
-	 "current_validation_error": 7.523981912223136e-15,
-	 "lowest_validation_error": 7.523981912223136e-15
+		"name": "diff-ad2ss",  // "burger", "burger_2d", "diff-sorp", "diff-react", "allen-cahn"
+		"number": 100,  // The i-th model
+		"layer_sizes": [2, 10, 20, 10, 1] // [1, 10, 20, 10, 1] for burger, burger_2d, diffusion_sorption, and allen_cahn, [2, 20, 20, 20, 2] for diffusion_reaction
 	}
-   }
+}
